# acteval

./: README.md  llms.txt  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  publish.yml
dev/bench/: data.js
scripts/: generate_blog_plots.py
src/acteval/: __init__.py  __main__.py  _aggregation.py  _compat.py  _filters.py  _jobs.py  _pipeline.py  _report.py  _result_frame.py  _splits.py  cli.py  config.toml  evaluate.py  filters.py  jobs.py  ops.py  pairwise.py  population.py  post_process.py
src/acteval/creativity/: __init__.py
src/acteval/creativity/features/: creativity.py
src/acteval/density/: __init__.py
src/acteval/density/describe/: frequency.py  transitions.py
src/acteval/density/features/: frequency.py  participation.py  pid_features.py  times.py  transitions.py  utils.py
src/acteval/describe/: __init__.py  frequency.py  plot.py  results.py  times.py  transitions.py  utils.py
src/acteval/distance/: __init__.py  scalar.py  wasserstein.py
src/acteval/features/: __init__.py  _discretise.py  _pid_features.py  _utils.py  catalogue.py  creativity.py  frequency.py  participation.py  structural.py  times.py  transitions.py
src/acteval/structural/: __init__.py
src/acteval/structural/features/: structural.py
tests/: bench_evaluate.py  conftest.py  test_bench_evaluate.py  test_bench_pairwise.py  test_cli.py  test_compare.py  test_creativity.py  test_describe_features.py  test_distance_emd.py  test_distance_scalar.py  test_features_catalogue.py  test_features_participation.py  test_features_structural.py  test_features_times.py  test_features_transitions.py  test_features_utils.py  test_filter.py  test_filter_cmd.py  test_frequency.py  test_integration.py  test_jobs.py  test_missing_features.py  test_pairwise.py  test_pid_features.py  test_polars_compat.py  test_population.py  test_report.py  test_validation.py
