[project]
name = "acteval"
version = "0.1.0"
description = "Standalone library for evaluating activity sequences"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "pot",
    "matplotlib",
    "tabulate",
    "tomli>=1.1.0; python_version < '3.11'",
]

[tool.uv]
dev-dependencies = ["pytest", "pytest-cov", "pytest-benchmark", "ruff", "black"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acteval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--benchmark-disable"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/test_distance_emd.py" = ["E402"]

[tool.black]
target-version = ["py39"]
