[project]
name = "acteval"
version = "0.1.2"
description = "Standalone library for evaluating activity sequences"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "pot",
    "matplotlib",
    "tabulate",
    "tomli>=1.1.0; python_version < '3.11'",
    "tslearn",
    "tqdm",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "ruff",
    "black",
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
    "polars>=1.8.2",
]

[project.scripts]
acteval = "acteval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acteval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/test_bench_evaluate.py --ignore=tests/test_bench_pairwise.py --benchmark-columns=mean,stddev,rounds --benchmark-sort=name"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/test_distance_emd.py" = ["E402"]

[tool.black]
target-version = ["py310"]
